--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "nodejs服务端练习项目",
   "main": "index.js",
   "dependencies": {
+    "fs": "0.0.1-security",
     "mime": "^2.2.0",
+    "path": "^0.12.7",
     "socket.io": "^2.0.4"
   },
   "devDependencies": {},
