--- a/package.json
+++ b/package.json
@@ -5,12 +5,15 @@
   "main": "index.js",
   "dependencies": {
     "express": "^4.16.3",
+    "express3-handlebars": "^0.5.2",
     "fs": "0.0.1-security",
     "mime": "^2.2.0",
     "path": "^0.12.7",
     "socket.io": "^2.0.4"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "@types/express": "^4.11.1"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
